--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       <h2>Wed, Nov 26:</h2> 
       <div id="mc-content">
         <details>
-          <summary>Get all the free stuff we can!!</summary>
+          <summary>Get all the free stuff we can!! (Click Me)</summary>
           <ul>
             <li>Timmies: breakfast sandwich</li>
             <li>Jersey Mike's (Union): free sub</li>
