--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>J & I</title>
+    <title>GF Bday</title>
 
     <!-- MAIN CSS and Page Icon -->
     <link rel="stylesheet" href="./main.css" />
@@ -20,7 +20,7 @@
   <body>
     </br>
     <div id="lock-page">
-      <h1>J & I<i class='bx bxs-lock-alt'></i></h1>
+      <h1>J & I <i class='bx bxs-lock-alt'></i></h1>
       <div id="content">
         <input id="password-input" placeholder="Password" autocomplete="off" type="password">
         <i id='eyes' class='bx bx-show' onclick="eyetoggle()"></i>
@@ -118,11 +118,11 @@
       <br>
       <h2>Thursday, Nov 27:</h2> 
       <div id="mc-content">
-        12pm: Delicious Lunch <br>
-        2pm: Take Photos @ Allen Garden (Actually go!) <br>
-        4pm: Cafe Break <br>
+        11:30am: Photos @ Allen Garden (Actually go!) <br>
+        12pm: Brunch @ Ohiru <br>
+        2:30pm: Tea Tasting @ Bampot<br>
         <!-- 4pm: Foot reflexology @ shining stars (actually go!) -->
-        6pm: Fancy Dinner & Photos <br>
+        6pm: Fancy Dinner & More Photos! <br>
       </div>
 
       <br>
